--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html>
-<title>Jenkins CI/CD pipeiline through jenkinsfile and docker</title>
+<title>Jenkins CI/CD pipeiline </title>
 <body>
 <h1> Demo of Jenkin, second- on CI CD pipeline!
-<h2>3 jobs process git-job(running here) -> build-website(till here in one shot) ->Push to Prod - Production server URL will work
-<h3> 27th April-2020 docker registry push thru jenkins docker plugin as well-demo 
-<h4> Jenkinsfile to push image to docker - 27th apr -understandin
 </body>
 </html>
