--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Jenkins CI/CD pipeiline </title>
 <body>
-<h1> Demo of Jenkin, second- on CI CD pipeline!
+<h1> Demo of Jenkin,  on CI CD pipeline!
 </body>
 </html>
