JEnkins demo thro git bash

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title>Jenkins CI/CD pipeiline </title>
 <body>
 <h1> Demo of Jenkin ,  on CI CD pipeline!
-<h2> CI CD
+<h2> CI CD , used git clone
 </body>
 </html>
